--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=4295
 spring.application.url=http://localhost:${server.port}
 spring.application.name=spring-jpa
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-jpa?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-data?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
